[package]
name = "RevisionChest"
version = "0.1.0"
edition = "2024"

[dependencies]
bzip2 = "0.4"
quick-xml = { version = "0.37", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
sevenz-rust = "0.6"
rayon = "1.10"
zstd = "0.13"
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4"
rusqlite = { version = "0.32", features = ["bundled"] }
crossbeam-channel = "0.5"
